# rust_robot_designer

./: .gitignore  Cargo.toml
src/: brain.rs  capsule.rs  capsule_app.rs  capsule_app_old.rs  cma_es.rs  cma_es_fns.rs  cma_es_old.rs  constants.rs  evaluation.rs  joint.rs  main.rs  main_old.rs  not_main.rs  physics_world.rs  robot_physics.rs  robot_physics_builder.rs  robot_physics_updater.rs  robot_random_search.rs  robot_renderer.rs  robot_sim_shared.rs  robot_simulator.rs  robot_trainer.rs  shared_config.rs
src/editor/: capsule_editor.rs  common.rs  joint_editor.rs  mod.rs  robot_editor.rs
src/model/: capsule.rs  joint.rs  mod.rs  robot.rs
