[package]
name = "capsule_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
# # For image support:
# egui_extras = { workspace = true, features = ["default", "image"] }
egui_dock = "0.12"
egui_extras = { version = "0.27.2", features = ["default", "image"] }
env_logger = { version = "0.11.3", default-features = false, features = [
    "auto-color",
    "humantime",
] }
geo = "0.28.0"
rand = "0.8.5"
rapier2d = "0.18.0"
